compiler/tests/language/negative/oopSurfaceRoleCapability/surface/missingRequiredRoleMethod.qn
impl HttpCtx<...Caps> : pub Authenticated<HttpCtx<...Caps>> {
}
